--- a/src/app/column-chart/column-chart.component.html
+++ b/src/app/column-chart/column-chart.component.html
@@ -1,7 +1,8 @@
-<h3>Angular(V14) standalone components with Highcharts</h3>
-<highcharts-chart
-  [Highcharts]="Highcharts"
-  [options]="columnchart"
-  style="width: 100%; height: 400px; display: block;"
->
-</highcharts-chart>
+<div *ngIf="viewChart"> 
+  <highcharts-chart
+    [Highcharts]="Highcharts"
+    [options]="columnchart"
+    style="width: 100%; height: 400px; display: block;">
+  </highcharts-chart>
+</div>
+
