--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
     <!-- <app-gantt-chart class="card"></app-gantt-chart> -->
     <!-- <app-xrange-chart class="card"></app-xrange-chart> -->
     <app-column-chart class="card"> </app-column-chart>
+    <!-- <app-twin-column-chart class="card"></app-twin-column-chart> -->
     <!-- <app-lazy-loading-chart class="card"></app-lazy-loading-chart> -->
 </main>
