--- a/src/app/twin-column-chart/twin-column-chart.component.html
+++ b/src/app/twin-column-chart/twin-column-chart.component.html
@@ -1,1 +1,8 @@
-<p>twin-column-chart works!</p>
+<div *ngIf="viewChart"> 
+  <highcharts-chart
+    [Highcharts]="Highcharts"
+    [options]="columnchart"
+    style="width: 100%; height: 400px; display: block;">
+  </highcharts-chart>
+</div>
+
